--- a/application/application-standard/pom.xml
+++ b/application/application-standard/pom.xml
@@ -74,7 +74,7 @@
 
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
-            <artifactId>rule-engine-component</artifactId>
+            <artifactId>rule-engine-core</artifactId>
             <version>${project.version}</version>
         </dependency>
 
@@ -123,7 +123,7 @@
         </dependency>
 
         <!-- sample test -->
-        <!--<dependency>
+        <dependency>
             <groupId>com.milesight.beaveriot</groupId>
             <artifactId>msc-integration</artifactId>
             <version>${project.version}</version>
@@ -137,7 +137,7 @@
             <version>${project.version}</version>
             <scope>system</scope>
             <systemPath>C:/Users/Zhangl/.m2/repository/com/milesight/beaveriot/ping/1.0-SNAPSHOT/ping-1.0-SNAPSHOT.jar</systemPath>
-        </dependency>-->
+        </dependency>
 
         <!-- unit test -->
         <dependency>
