feat: Modify maven pom.xml

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -18,6 +18,7 @@
         <module>authentication</module>
         <module>integration</module>
         <module>entity</module>
+        <module>workflow</module>
     </modules>
 
     <properties>
