--- a/core/eventbus/pom.xml
+++ b/core/eventbus/pom.xml
@@ -5,11 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
-        <artifactId>notifications</artifactId>
+        <artifactId>core</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>notification-email</artifactId>
+    <artifactId>eventbus</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>eventbus-api</module>
+        <module>eventbus-component</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
