--- a/extension-components/notifications/notification-webhook/pom.xml
+++ b/extension-components/notifications/notification-webhook/pom.xml
@@ -6,10 +6,19 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>notifications</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>notification-webhook</artifactId>
+    <name>notification-webhook</name>
+    <description>An open-source platform designed for rapid and intuitive IoT application development.</description>
+    <url>https://github.com/milesight-iot/beaver-iot</url>
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://opensource.org/license/MIT</url>
+        </license>
+    </licenses>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
