--- a/beaver-iot-parent/pom.xml
+++ b/beaver-iot-parent/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.milesight.beaveriot</groupId>
     <artifactId>beaver-iot-parent</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>beaver-iot-parent</name>
     <description>An open-source platform designed for rapid and intuitive IoT application development.</description>
@@ -52,7 +52,7 @@
         <lombok-mapstruct.version>0.2.0</lombok-mapstruct.version>
         <jsqlparser.version>4.4</jsqlparser.version>
 
-		<deploy.skip>false</deploy.skip>
+        <deploy.skip>false</deploy.skip>
     </properties>
 
     <dependencyManagement>
