--- a/services/authentication/authentication-service/pom.xml
+++ b/services/authentication/authentication-service/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>authentication</artifactId>
-        <version>1.0.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>authentication-service</artifactId>
@@ -80,18 +80,18 @@
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
             <artifactId>context</artifactId>
-            <version>1.0.0</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
             <artifactId>authentication-api</artifactId>
-            <version>1.0.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
             <artifactId>user-api</artifactId>
-            <version>1.0.0</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
