--- a/services/workflow/pom.xml
+++ b/services/workflow/pom.xml
@@ -10,8 +10,13 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <groupId>com.milesight.iab</groupId>
+    <groupId>com.milesight.beaveriot</groupId>
     <artifactId>workflow</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>workflow-manager</module>
+        <module>workflow-service</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -21,7 +26,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.milesight.iab</groupId>
+            <groupId>com.milesight.beaveriot</groupId>
             <artifactId>rule-engine-manager</artifactId>
             <version>${project.version}</version>
         </dependency>
