--- a/core/rule-engine/rule-engine-core/pom.xml
+++ b/core/rule-engine/rule-engine-core/pom.xml
@@ -9,7 +9,7 @@
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>rule-engine-component</artifactId>
+    <artifactId>rule-engine-core</artifactId>
     <name>rule-engine-component</name>
     <description>An open-source platform designed for rapid and intuitive IoT application development.</description>
     <url>https://github.com/milesight-iot/beaver-iot</url>
