--- a/services/workflow/pom.xml
+++ b/services/workflow/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.milesight.beaveriot</groupId>
         <artifactId>beaver-iot</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -27,7 +27,7 @@
     <dependencies>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
-            <artifactId>rule-engine-manager</artifactId>
+            <artifactId>rule-engine-core</artifactId>
             <version>${project.version}</version>
         </dependency>
 
