--- a/extension-components/notifications/notification-websocket/pom.xml
+++ b/extension-components/notifications/notification-websocket/pom.xml
@@ -40,6 +40,11 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
