--- a/services/authentication/authentication-service/pom.xml
+++ b/services/authentication/authentication-service/pom.xml
@@ -57,6 +57,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-cas</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!-- JDBC Support -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
