--- a/core/rule-engine/rule-engine-core/pom.xml
+++ b/core/rule-engine/rule-engine-core/pom.xml
@@ -73,6 +73,10 @@
          </dependency>-->
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-core-catalog</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-core-engine</artifactId>
         </dependency>
 
