feat: Add RuleNodeInterceptor interceptor to support RuleNode node construction interception

--- a/application/application-dev/pom.xml
+++ b/application/application-dev/pom.xml
@@ -106,6 +106,18 @@
             <artifactId>entity-service</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>workflow-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>rule-engine-components</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
