--- a/core/rule-engine/rule-engine-core/pom.xml
+++ b/core/rule-engine/rule-engine-core/pom.xml
@@ -87,6 +87,11 @@
 
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-http</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-undertow</artifactId>
         </dependency>
 
