--- a/services/workflow/pom.xml
+++ b/services/workflow/pom.xml
@@ -27,7 +27,27 @@
     <dependencies>
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
-            <artifactId>rule-engine-core</artifactId>
+            <artifactId>rule-engine-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>permission-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>user-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>entity-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>context</artifactId>
             <version>${project.version}</version>
         </dependency>
 
