--- a/core/rule-engine/rule-engine-api/pom.xml
+++ b/core/rule-engine/rule-engine-api/pom.xml
@@ -75,5 +75,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 </project>
