--- a/services/workflow/workflow-service/pom.xml
+++ b/services/workflow/workflow-service/pom.xml
@@ -23,5 +23,11 @@
             <artifactId>eventbus-component</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>entity-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
