--- a/core/rule-engine/rule-engine-components/pom.xml
+++ b/core/rule-engine/rule-engine-components/pom.xml
@@ -71,5 +71,17 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-mvel</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-quartz</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.cronutils</groupId>
+            <artifactId>cron-utils</artifactId>
+            <version>9.2.0</version>
+        </dependency>
+
     </dependencies>
+
 </project>
