--- a/core/rule-engine/rule-engine-components/pom.xml
+++ b/core/rule-engine/rule-engine-components/pom.xml
@@ -81,7 +81,11 @@
             <artifactId>cron-utils</artifactId>
             <version>9.2.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.simplejavamail</groupId>
+            <artifactId>simple-java-mail</artifactId>
+            <version>8.12.4</version>
+        </dependency>
     </dependencies>
 
 </project>
