--- a/core/rule-engine/rule-engine-components/pom.xml
+++ b/core/rule-engine/rule-engine-components/pom.xml
@@ -76,7 +76,11 @@
             <artifactId>cron-utils</artifactId>
             <version>${cron-util.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.simplejavamail</groupId>
+            <artifactId>simple-java-mail</artifactId>
+            <version>${simple-java-mail.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
