--- a/application/application-standard/pom.xml
+++ b/application/application-standard/pom.xml
@@ -161,11 +161,11 @@
             <version>${project.version}</version>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>com.milesight.beaveriot</groupId>
             <artifactId>msc-integration</artifactId>
             <version>1.1.0-SNAPSHOT</version>
-        </dependency>-->
+        </dependency>
 
 
         <!-- unit test -->
