chore: add default integrations section in application-standard dependencies

--- a/application/application-standard/pom.xml
+++ b/application/application-standard/pom.xml
@@ -161,6 +161,8 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- default integrations -->
+
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
             <artifactId>msc-integration</artifactId>
