--- a/application/application-standard/pom.xml
+++ b/application/application-standard/pom.xml
@@ -164,7 +164,7 @@
         <!-- default integrations -->
 
         <dependency>
-            <groupId>com.milesight.beaveriot</groupId>
+            <groupId>com.milesight.beaveriot.integrations</groupId>
             <artifactId>msc-integration</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
