--- a/services/permission/permission-service/pom.xml
+++ b/services/permission/permission-service/pom.xml
@@ -83,6 +83,11 @@
             <artifactId>device-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
