--- a/application/application-standard/pom.xml
+++ b/application/application-standard/pom.xml
@@ -161,6 +161,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>cluster</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- default integrations -->
 
         <dependency>
