--- a/beaver-iot-parent/pom.xml
+++ b/beaver-iot-parent/pom.xml
@@ -52,6 +52,7 @@
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok-mapstruct.version>0.2.0</lombok-mapstruct.version>
         <jsqlparser.version>4.4</jsqlparser.version>
+		<jython-standalone-version>2.7.4</jython-standalone-version>
         <transmittable-thread-local.version>2.14.5</transmittable-thread-local.version>
         <shedlock.version>6.3.0</shedlock.version>
         <redisson.version>3.44.0</redisson.version>
