--- a/extension-components/pom.xml
+++ b/extension-components/pom.xml
@@ -39,6 +39,7 @@
         <module>data-components</module>
         <module>notifications</module>
         <module>cluster</module>
+        <module>scheduler</module>
     </modules>
 
     <properties>
