feat: Monitor entity changes and update timers, isolate tenant timers

--- a/extension-components/scheduler/pom.xml
+++ b/extension-components/scheduler/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>context</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>user-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
