--- a/application/application-standard/src/main/resources/db/h2/changelog.yaml
+++ b/application/application-standard/src/main/resources/db/h2/changelog.yaml
@@ -6,3 +6,6 @@ databaseChangeLog:
   - includeAll:
       path: sql/v1.1.0
       relativeToChangelogFile: true
+  - includeAll:
+      path: sql/v1.2.0
+      relativeToChangelogFile: true
