--- a/services/workflow/workflow-service/pom.xml
+++ b/services/workflow/workflow-service/pom.xml
@@ -26,6 +26,12 @@
 
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>mqtt-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
             <artifactId>entity-service</artifactId>
             <version>${project.version}</version>
         </dependency>
