--- a/application/application-standard/pom.xml
+++ b/application/application-standard/pom.xml
@@ -143,6 +143,11 @@
             <artifactId>entity-service</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>credentials-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.milesight.beaveriot</groupId>
@@ -181,6 +186,11 @@
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>message-pub-sub-component</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+        </dependency>
 
         <!-- unit test -->
         <!--<dependency>
