--- a/core/pom.xml
+++ b/core/pom.xml
@@ -40,6 +40,7 @@
         <module>context</module>
         <module>eventbus</module>
         <module>rule-engine</module>
+        <module>message-pub-sub</module>
     </modules>
 
     <properties>
