--- a/extension-components/pom.xml
+++ b/extension-components/pom.xml
@@ -38,6 +38,7 @@
     <modules>
         <module>data-components</module>
         <module>notifications</module>
+        <module>mqtt-broker</module>
         <module>cluster</module>
         <module>scheduler</module>
         <module>metrics</module>
