--- a/extension-components/cluster/pom.xml
+++ b/extension-components/cluster/pom.xml
@@ -35,5 +35,21 @@
             <groupId>net.javacrumbs.shedlock</groupId>
             <artifactId>shedlock-provider-inmemory</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.milesight.beaveriot</groupId>
+            <artifactId>context</artifactId>
+        </dependency>
     </dependencies>
 </project>
