feat(rule-engine): add MQTT subscription endpoint

--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -86,6 +86,8 @@ camel:
           title: "Trigger"
         - name: "eventListener"
           title: "Event Listener"
+        - name: "simpleMqtt"
+          title: "MQTT"
       control:
         - name: "choice"
           title: "IF/ELSE"
@@ -132,6 +134,12 @@ oauth2:
     - "/user/register"
     - "/user/status"
     - "/public/**"
+
+moquette:
+  port: 1883
+  host: 0.0.0.0
+  allow_anonymous: true
+  persistence_enabled: false
 
 logging:
   level:
