--- a/application/application-standard/src/test/resources/application.yml
+++ b/application/application-standard/src/test/resources/application.yml
@@ -63,6 +63,8 @@ camel:
           title: "Trigger"
         - name: "eventListener"
           title: "Event Listener"
+        - name: "simpleMqtt"
+          title: "MQTT"
       control:
         - name: "choice"
           title: "IF/ELSE"
@@ -108,6 +110,12 @@ oauth2:
     - "/user/register"
     - "/user/status"
     - "/public/**"
+
+moquette:
+  port: 1883
+  host: 0.0.0.0
+  allow_anonymous: true
+  persistence_enabled: false
 
 logging:
   level:
