--- a/application/application-standard/src/main/resources/application.yml
+++ b/application/application-standard/src/main/resources/application.yml
@@ -57,6 +57,12 @@ spring:
           class: "org.redisson.codec.JsonJacksonCodec"
         transportMode: "NIO"
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "health,metrics,prometheus,info"
+        exclude: shutdown,beans
 #eventbus:
 #  execution:
 #    core-pool-size: 16
@@ -103,6 +109,7 @@ camel:
           - "javascript"
           - "python"
           - "mvel"
+
 websocket:
   enabled: true
   port: ${WEBSOCKET_PORT:9201}
