--- a/extension-components/pom.xml
+++ b/extension-components/pom.xml
@@ -40,6 +40,7 @@
         <module>notifications</module>
         <module>cluster</module>
         <module>scheduler</module>
+        <module>metrics</module>
     </modules>
 
     <properties>
